--- a/public/back/first.html
+++ b/public/back/first.html
@@ -67,12 +67,27 @@
 
         <!--内容区域-->
         <div class="lt_content">
-            <div class="pic_left pull-left">11</div>
-            <div class="pic_right pull-right">22</div>
+            <button class="btn btn-default mb_20 btn_add">添加分类</button>
+
+            <table class="table table-bordered table-hover">
+                <thead>
+                <tr>
+                    <td width="20%">序号</td>
+                    <td width="80%">分类名称</td>
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+
+            <!--分页-->
+            <div class="text-right">
+                <ul id="paginator"></ul>
+            </div>
         </div>
     </div>
 </div>
-<!--模块框-->
+<!--退出模块框-->
 <div class="modal fade" tabindex="-1" id="logoutModal">
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
@@ -89,16 +104,58 @@
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+</div>
 
+<div class="modal fade" tabindex="-1" id="addModal">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                <h4 class="modal-title">添加分类</h4>
+            </div>
+
+            <div class="modal-body">
+                <form id="form">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="categoryName" placeholder="请输入一级分类的名称">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <!--
+                  html5新增了几个属性：
+                   placeholder：占位信息
+                   autofocus:自动获取焦点
+                   autoComplete:自动补全 默认是on,  off
+                   multiple:多选  select  input:file
+                   form="form" :form表单的id，允许你的input写到form的外面，可以通过form这个属性关联到表单，相当于写在form的里面。
+               -->
+                <button type="submit" form="form" class="btn btn-primary">添加</button>
+            </div>
+
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div>
+
+
+<script type="text/html" id="tpl">
+    {{each rows v i}}
+    <tr>
+        <td>{{(page-1)*size+i+1}}</td>
+        <td>{{v.categoryName}}</td>
+    </tr>
+    {{/each}}
+</script>
 
 <script src="lib/jquery/jquery.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
-<script src="lib/bootstrap-validator/js/bootstrapValidator.js"></script>
-<script src="lib/nprogress/nprogress.js"></script>
-<script src="lib/echarts/echarts.min.js"></script>
+<script src="lib/bootstrap-validator/js/bootstrapValidator.js"></script>  <!--基于bootstrap的表单校验插件-->
+<script src="lib/bootstrap-paginator/bootstrap-paginator.js"></script>  <!--基于bootstrap的分页插件-->
+<script src="lib/artTemplate/template-web.js"></script>         <!--活动模板插件-->
+<script src="lib/nprogress/nprogress.js"></script>      <!-- 进度条插件 -->
 <script src="js/common.js"></script>
-<script src="js/index.js"></script>
+<script src="js/first.js"></script>
 
 </body>
 </html>
