--- a/public/back/second.html
+++ b/public/back/second.html
@@ -112,7 +112,53 @@
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+</div>
+
+<div class="modal fade" tabindex="-1" id="addModal">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                <h4 class="modal-title">添加分类</h4>
+            </div>
+            <div class="modal-body">
+                <form id="form">
+                    <div class="form-group">
+                        <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+                                <span class="dropdown-text">请选择一级分类</span>
+                                <span class="caret"></span>
+                                <input type="hidden" name="categoryId">
+                            </button>
+                            <ul class="dropdown-menu">
+
+                            </ul>
+                            <input type="hidden" name="hot"  value="1">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="exampleInputEmail1" placeholder="请输入二级分类名称" name="brandName">
+                    </div>
+                    <div class="form-group">
+                        <div class="fileupload_box">
+                            <button class="btn btn-default">上传图片</button>
+                            <input type="file" class="btn btn-default" id="fileupload" name="pic1" data-url="/category/addSecondCategoryPic">
+                        </div>
+                    </div>
+                    <div class="form-group img_box">
+                        <img src="./img/none.png" width="100" height="100" alt="">
+                        <input type="hidden" name="brandLogo">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="submit"  form="form" class="btn btn-primary ">添加</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div>
+
 
 <script type="text/html" id="tpl">
    {{each rows v i}}
@@ -125,9 +171,17 @@
     {{/each}}
     
 </script>
+<script type="text/html" id="tpl2">
+{{each rows v i}}
+    <li><a data-id="{{ v.id }}" href="#">{{v.categoryName}}</a></li>
+ {{/each}}
+</script>
+
 
 
 <script src="lib/jquery/jquery.js"></script>
+<script src="lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script src="lib/jquery-fileupload/jquery.fileupload.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 <script src="lib/bootstrap-validator/js/bootstrapValidator.js"></script>
 <script src="lib/bootstrap-paginator/bootstrap-paginator.js"></script>
