--- a/public/front/user.html
+++ b/public/front/user.html
@@ -5,43 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>乐淘商城-首页</title>
+    <title>乐淘商城-个人中心</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="lib/fa/css/font-awesome.css">
     <link rel="stylesheet" href="lib/mui/css/mui.css">
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/user.css">
 
 </head>
 
 <body>
     <div class="lt_container">
         <div class="lt_header">
-            <a class="icon_left" href="javascript:histroy.go(-1);">
+            <a class="icon_left" href="javascript:history.go(-1);">
                 <span class="mui-icon mui-icon-arrowleft"></span>
             </a>
-            <h4>登录</h4>
+            <h4>个人中心</h4>
 
         </div>
 
         <div class="lt_main">
-            <form class="mui-input-group">
-                <div class="mui-input-row">
-                    <label>用户名</label>
-                    <input type="text" name="username" class="mui-input-clear" placeholder="请输入用户名">
-                </div>
-                <div class="mui-input-row">
-                    <label>密码</label>
-                    <input type="password" name="password" class="mui-input-password" placeholder="请输入密码">
-                </div>
-                <div class="mui-button-row">
-                    <button type="button" class="mui-btn mui-btn-primary btn_login">登录</button>
-                    <button type="reset" class="mui-btn mui-btn-danger">重置</button>
-                </div>
-            </form>
-            <div class="mui-text-right">
-                <a href="register.html" style="font-size:12px">免费注册</a>
+            <ul class="mui-table-view">
+                <li class="mui-table-view-cell userinfo">
+                    <!-- 活动模板 -->
+                   
+                </li>
+                <li class="mui-table-view-cell">
+                    <a class="mui-navigate-right">账号与安全</a>
+                </li>
+                <li class="mui-table-view-cell">
+                    <a class="mui-navigate-right">我的购物车</a>
+                </li>
+                <li class="mui-table-view-cell">
+                    <a class="mui-navigate-right">收获地址管理</a>
+                </li>
+            </ul>
+            <div class="logout_wrap">
+                <a class="btn_logout mui-btn mui-block">退出</a>
             </div>
+
         </div>
 
 
@@ -74,10 +76,23 @@
             </ul>
         </div>
     </div>
+
+    <script type ="text/html" id="tpl">
+         <a href="javascript:;">
+            <img class="mui-media-object mui-pull-left" src="img/user.jpg">
+                <div class="mui-media-body">
+                    {{username}}
+                     <p class='mui-ellipsis'>绑定手机:{{mobile}}</p>
+                </div>
+         </a>
+        
+    </script>
     <script src="lib/mui/js/mui.js"></script>
     <script src="lib/zepto/zepto.min.js"></script>
+    <script src="lib/artTemplate/template-web.js"></script>
     <script src="js/common.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/user.js"></script>
+
 </body>
 
 </html>
